--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,19 +17,18 @@ categories    = ["embedded", "network-programming", "no-std"]
 keywords      = ["WPAN"]
 
 [features]
+default  = ["security"]
+security = ["cipher"]
 
 [dependencies]
 hash32        = "0.2.1"
 hash32-derive = "0.1"
 byte = "0.2.7"
 defmt = { version = ">=0.2.0,<0.4", optional = true }
+cipher = {version = "0.3.0", default-features = false, optional = true}
 
 [dependencies.ccm]
 version          = "0.4.0"
-default-features = false
-
-[dependencies.cipher]
-version          = "0.3.0"
 default-features = false
 
 [dependencies.serde]
