--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ keywords      = ["WPAN"]
 
 [features]
 default  = ["security"]
-security = ["cipher"]
+security = ["cipher", "ccm"]
 
 [dependencies]
 hash32        = "0.2.1"
@@ -26,10 +26,8 @@ hash32-derive = "0.1"
 byte = "0.2.7"
 defmt = { version = ">=0.2.0,<0.4", optional = true }
 cipher = {version = "0.3.0", default-features = false, optional = true}
+ccm = { version = "0.4.0", default-features = false, optional = true}
 
-[dependencies.ccm]
-version          = "0.4.0"
-default-features = false
 
 [dependencies.serde]
 version          = "1.0"
