--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -17,10 +17,11 @@ jobs:
       uses: actions-rs/cargo@v1
       with:
         command: clippy --all-features
-    - name: Clippy no security
-      run: |
-        set -ex
-        cargo clippy --no-default-features
+    - name: Clippy
+      uses: actions-rs/cargo@v1
+      with:
+        command: clippy --no-default-features
+  format:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout sources
@@ -35,10 +36,10 @@ jobs:
       uses: actions-rs/cargo@v1
       with:
         command: fmt --all -- --check
-    - name: Check no security
-      run: |
-        set -ex
-        cargo fmt --no-default-features --all -- --check
+    - name: Check Format No security
+      uses: actions-rs/cargo@v1
+      with:
+        command: fmt --no-default-features --all -- --check
   build-armv6m:
     runs-on: ubuntu-latest
     steps:
