--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -16,11 +16,13 @@ jobs:
     - name: Clippy
       uses: actions-rs/cargo@v1
       with:
-        command: clippy --all-features
+        command: clippy
+        args: --all-features
     - name: Clippy
       uses: actions-rs/cargo@v1
       with:
-        command: clippy --no-default-features
+        command: clippy
+        args: --no-default-features
   format:
     runs-on: ubuntu-latest
     steps:
@@ -35,11 +37,13 @@ jobs:
     - name: Check Format
       uses: actions-rs/cargo@v1
       with:
-        command: fmt --all -- --check
-    - name: Check Format No security
+        command: fmt
+        args: --all -- --check
+    - name: Check Format
       uses: actions-rs/cargo@v1
       with:
-        command: fmt --no-default-features --all -- --check
+        command: fmt
+        args: --no-default-features --all -- --check
   build-armv6m:
     runs-on: ubuntu-latest
     steps:
